--- a/CoolCars.MAUI/MainPage.xaml
+++ b/CoolCars.MAUI/MainPage.xaml
@@ -4,16 +4,20 @@
              x:Class="CoolCars.MAUI.MainPage"
              Title="Cool Cars">
 
-    <Grid RowDefinitions="Auto,*" Padding="10">
-        <Button 
-            Grid.Row="0"
-            Text="Load Cars" 
-            Clicked="OnLoadCarsClicked"
-            Margin="0,10,0,10"
-            HorizontalOptions="Center" />
+    <Grid RowDefinitions="Auto,Auto,*" Padding="10">
+        <HorizontalStackLayout Grid.Row="0" HorizontalOptions="Center" Spacing="20" Margin="0,10,0,10">
+            <Button 
+                Text="Load Cars" 
+                Clicked="OnLoadCarsClicked" />
+                
+            <Button 
+                Text="Add Car" 
+                Clicked="OnAddCarClicked"
+                BackgroundColor="#4CAF50" />  
+        </HorizontalStackLayout>
             
         <ListView 
-            Grid.Row="1"
+            Grid.Row="2"
             x:Name="CarsListView"
             ItemsSource="{Binding}"
             HasUnevenRows="True"
