--- a/CoolCars.MAUI/MainPage.xaml
+++ b/CoolCars.MAUI/MainPage.xaml
@@ -60,6 +60,12 @@
                                 <Label Text="{Binding Acceleration_0_200, StringFormat='0-200 km/h: {0}'}" />
                                 <Label Text="{Binding QuarterMileTime, StringFormat='Quarter Mile: {0}'}" />
                                 <Label Text="{Binding TopSpeed, StringFormat='Top Speed: {0}'}" />
+                                <Button Text="Play Engine Sound" 
+                                        Margin="0,10,0,0"
+                                        BackgroundColor="#FF5722"
+                                        TextColor="White"
+                                        CommandParameter="{Binding Name}"
+                                        Clicked="OnPlaySoundClicked" />
                             </StackLayout>
                             
                             <BoxView 
